# hw04-Group22

./: .buildinfo  LOSC_Event_tutorial.html  Makefile  README.html  README.md  contribution_statement.html  genindex.html  hw04_description.html  objects.inv  search.html  searchindex.js
.doctrees/: LOSC_Event_tutorial.doctree
_build/.doctrees/: LOSC_Event_tutorial.doctree  README.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/: LOSC_Event_tutorial.html  README.html  contribution_statement.html  genindex.html  hw04_description.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: contribution_statement.doctree  environment.pickle
_build/html/_sources/: README.md
_build/jupyter_execute/: LOSC_Event_tutorial.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
_sources/: README.md  contribution_statement.md
ligotools/: __init__.py  setup.cfg  utils.py
ligotools/tests/: test_readligo.py  test_utils.py  tests_readligo.py
